fix typography color theme not working

--- a/style/style.css
+++ b/style/style.css
@@ -845,7 +845,7 @@ margin:0px;
 font-family:Roboto, Helvetica, Arial, sans-serif;
 line-height:1.5;
 letter-spacing:0.00938em;
-color:black;
+color:var(--MUI_Typography_Root-0);
 
 }
 .MUI_Typography_Root_string {
