--- a/style/style.css
+++ b/style/style.css
@@ -863,7 +863,7 @@ display:flex;
 }
 .MUI_Drawer_Box {
 transform:none;
-transition:transform 700ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+transition:transform 700ms cubic-bezier(0, 0, 0.2, 1);
 display:flex;
 flex-grow:1;
 flex-direction:column;
