--- a/style/style.css
+++ b/style/style.css
@@ -1847,8 +1847,8 @@ font-weight:400;
 font-size:0.875rem;
 line-height:1.43;
 letter-spacing:0.01071em;
-color:rgb(255, 255, 255);
-background-color:rgb(50, 50, 50);
+color:inherit;
+background-color:inherit;
 display:flex;
 ---webkit-box-align:center;
 align-items:center;
